--- a/mocap/IDE/VS2010/mocapPlayer/mocapPlayer.vcxproj.filters
+++ b/mocap/IDE/VS2010/mocapPlayer/mocapPlayer.vcxproj.filters
@@ -54,6 +54,12 @@
     <ClCompile Include="..\..\..\mocapPlayer\PointCloud.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\mocapPlayer\Transition.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mocapPlayer\MotionGraph.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\mocapPlayer\displaySkeleton.h">
@@ -93,6 +99,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\mocapPlayer\PointCloud.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\mocapPlayer\Transition.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\mocapPlayer\MotionGraph.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
